@@ -79,7 +79,8 @@ namespace libport
   template<typename Map>
   typename Map::iterator
   put (Map& map,
-       const typename Map::key_type& key, const typename Map::mapped_type& value)
+       const typename Map::key_type& key,
+       const typename Map::mapped_type& value)
   {
     // See ``Efficient STL''.
     typename Map::iterator i = map.lower_bound (key);
@@ -98,6 +99,6 @@ namespace libport
       }
   }
 
-}
+} // namespace libport
 
 #endif // !LIBPORT_CONTAINERS_HXX
