@@ -28,7 +28,7 @@ namespace urbi
   }
 }
 
-# else
+# else /* !WIN32 */
 
 #  include <sys/time.h>
 #  include <time.h>
