@@ -1,5 +1,14 @@
 2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
+	Properly detect G++.
+	* hash.hh: Properly detect G++.
+	* semaphore.hh,
+	* utime.hh,
+	* lockable.hh,
+	* containers.hxx: Aesthetic changes.
+
+2006-12-07  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
 	Improve Windows compatibility.
 	* windows.hh: Move to...
 	* windows.h: ... this. Because this header isn't specific for C++.
